# slang-lsp-tools

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  Doxyfile  LICENSE  README.md  documenter_visitor.cpp  documenter_visitor.h  main_blackbox.cpp  third-party.cmake
.github/workflows/: cmake-single-platform.yml
cmake/: create-component.cmake  lsp-datastructures.cmake  sv-explorer.cmake  sv-formatter.cmake  sv-indexer.cmake  sv-tree.cmake  third-party.cmake
explorer/: explorer_visitor.cpp  explorer_visitor.h  hier_visitor.cpp  hier_visitor.h  main.cpp
formatter/: format_DataDeclaration.cpp  format_DataDeclaration.hpp  format_StatementExpansion.cpp  format_StatementExpansion.hpp  formatter_utils.hpp  indent_manager.cpp  indent_manager.hpp  main_formatter.cpp  spacing_manager.cpp  spacing_manager.hpp  sv_formatter.cpp  sv_formatter.hpp
indexer/: diplomat_index.cpp  index_core.cpp  index_elements.cpp  index_file.cpp  index_reference_visitor.cpp  index_scope.cpp  index_symbols.cpp  index_visitor.cpp  main_indexer.cpp  visitor_index.cpp
indexer/include/: diplomat_index.hpp  index_core.hpp  index_elements.hpp  index_file.hpp  index_reference_visitor.hpp  index_scope.hpp  index_symbols.hpp  index_visitor.hpp  visitor_index.hpp
lib-diplomat-index/: CMakeLists.txt
lib-diplomat-index/include/: diplomat_index.h
lib-diplomat-index/src/: demo.cpp  diplomat_index.cpp
lsp-server/: main_demo_client.cpp  main_lsp.cpp  rpc_transport.cpp
lsp-server/diplomat/include/: diagnostic_client.hpp  diplomat_document_cache.hpp  diplomat_index.hpp  diplomat_lsp.hpp  diplomat_lsp_ws_settings.hpp  hier_visitor.h  sv_document.hpp  visitor_index.hpp  visitor_module_bb.hpp
lsp-server/diplomat/src/: diagnostic_client.cpp  diplomat_document_cache.cpp  diplomat_index.cpp  diplomat_lsp.cpp  diplomat_lsp_binds.cpp  diplomat_lsp_ws_settings.cpp  hier_visitor.cpp  sv_document.cpp  visitor_index.cpp  visitor_module_bb.cpp
lsp-server/include/: helper_optional.hpp  lsp.hpp  lsp_default_binds.hpp  lsp_errors.hpp  lsp_initialization.hpp  lsp_spdlog_sink.hpp  rpc_transport.hpp  tcp_interface_server.hpp
lsp-server/include/types/: _base.hpp  client_capabilities.hpp  client_capabilities_workspace.hpp  client_capabilities_workspace_edit.hpp  client_capabilities_workspace_symbol.hpp  client_info.hpp  enums.hpp  lsp_initialization.hpp  workspace_folder.hpp
lsp-server/lsp/: lsp.cpp  lsp_default_binds.cpp  lsp_errors.cpp
lsp-server/rpc/: rpc_transport.cpp  tcp_interface_server.cpp
rpc-test/: cpphttplibconnector.hpp
rpc-test/warehouse/: main.cpp  warehouseapp.cpp  warehouseapp.hpp
samples/: mod_decl.sv  mod_inst.sv  typedef_enums.sv  var_assign.sv  var_declaration.sv
samples/designs/: multimod.sv  sub.sv  top.sv
samples/uvm/: design.sv  testbench.sv
samples/uvm/package/: typedef_enums.sv  typedef_include.svh  typedef_pkg.sv
samples/uvm/simple/: testbench.sv
tools/LSPGen/: main.py
tools/LSPGen/lspgen/: LSPTyped.py  indentation.py  lsp_definition.py  lsp_docstring.py  lsp_enum.py  lsp_metareader.py  lsp_methods.py  lsp_property.py  lsp_type.py
tools/json_schema/: diplomat_ws_settings.schema.json  exchangeTypes.metaModel.json
tools/stdio_sniffer/: wrap.sh
utils/ast-printer/: ast_print.cpp  ast_print.hpp  ast_print_main.cpp
